--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <li>
           <button class="nav-button">
-            <a href="#">Try it free</a>
+            Try it free
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
         </p>
 
         <button class="section-button">
-          <a href="#">Get Started For Free</a>
+          Get Started For Free
         </button>
       </div>
 
@@ -124,7 +124,7 @@
       <div>
         <h2 class="section-title">Ready To Build Your Community?</h2>
         <button class="section-button">
-          <a href="#">Get Started For Free</a>
+          Get Started For Free
         </button>
       </div>
     </div>
@@ -135,7 +135,7 @@
     <div class="footer-container">
       <!-- newletter -->
       <div class="newletter">
-        <h4 class="newsletter-title">NEWLETTER</h4>
+        <h3 class="newsletter-title">NEWLETTER</h3>
         <p class="footer-text">
           To receive tips on how to grow your community, sign up to our weekly
           newsletter. We’ll never send you spam or pass on your email address
@@ -185,7 +185,7 @@
     </div>
   </footer>
 
-  <div>
+  <div class="author">
     <p class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
