--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div>
-        <img src="images/screen-mockups.svg" alt="screen mock ups" />
+        <img src="images/screen-mockups.svg" width="400" height="900" alt="screen mock ups" />
       </div>
     </div>
 
